--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">RngDrink</string>
+    <string name="app_name">RNG Drinks</string>
     <string name="title_activity_settings">Settings</string>
 
     <!-- Preference Titles -->
