--- a/app/src/main/res/values-sl-rSI/strings.xml
+++ b/app/src/main/res/values-sl-rSI/strings.xml
@@ -43,5 +43,7 @@
     <string name="how_to_play">Pravila igre</string>
     <string name="how_to_play_first">Igro začnemo z nekim poljubnim številom, npr. 150. Prvi igralec pritisne gumb in igra generira  naključno število med izbranim številom (150) in 1. Novo generirano naključno število npr. 67 bo sedaj novo najvišje število.</string>
     <string name="how_to_play_second">Naslednja oseba, ki pritisne gumb bo sedaj generirala novo naključno število med 67 (ki je sedaj največje število) in 1. Igralci nato nadaljujejo igro v krogu in generirajo naključna števila, dokler nekdo dobi 1. Igralec, ki je dobil 1 mora narediti toliko požirkov kolikokrat je bilo potrebno pritisniti gumb, da je prišla enica.</string>
+    <string name="player_select">Igralci</string>
+    <string name="player_list_element">Igralec</string>
 
 </resources>
