--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="roll_button">Roll number</string>
     <!--Popup activity text -->
     <string name="popup_title">YOU LOSE!</string>
-    <string name="popup_sips">you have %d sips</string>
+    <string name="popup_sips">%s has %d sips</string>
     <string name="lose_button_text">Another round!</string>
 
     <!--=========================== SETUP MENU ============================ -->
@@ -44,5 +44,8 @@
     <string name="how_to_play_second">The next person who presses the \"roll number\" button will now get a randomly generated number between 67 and 1. the players continue going in circles pressing the button until someone reaches number 1. the player who rolls 1 has to drink as many sips as the number of times players had to roll a random number to get to 1.</string>
     <string name="player_select">Players</string>
     <string name="player_list_element">Player</string>
+    <string name="messages">Tough luck!:Better luck next time!:Bottoms up!:Out of luck!:Unfortunate!:Hard luck!:Drinking time!:Yikes!:Ouch!:Bad break!:Cheers!:Down the hatch!:Drink up!</string>
+    <string name="current_player">Current player:</string>
+    <string name="popup_shot">%s take a shot!</string>
 
 </resources>
